src/minhaGramaticaParser.java
// Generated from minhaGramatica.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class minhaGramaticaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, ENQUANTO=2, PARA=3, SE=4, SENAO=5, SENAO_SE=6, RETORNAR=7, FUNCAO=8, 
		ENTRADA=9, SAIDA=10, NULL=11, PRINCIPAL=12, TIPO=13, OP_ARIT=14, OP_REL=15, 
		OP_BOOL=16, OP_BOOL_NEG=17, OP_ATRIB=18, OP_CONCAT=19, ABRIR_CH=20, FECHAR_CH=21, 
		ABRIR_PAR=22, FECHAR_PAR=23, DELIMITADOR=24, ID=25, NUM=26, VALOR_BOOL=27, 
		STRING_LITERAL=28, WS=29, COMENT=30, ErrorChar=31;
	public static final int
		RULE_programa = 0, RULE_principal = 1, RULE_funcao = 2, RULE_parametros = 3, 
		RULE_parametro = 4, RULE_declaracoes = 5, RULE_declaracao_var = 6, RULE_comandos = 7, 
		RULE_comando = 8, RULE_atribuicao = 9, RULE_condicional = 10, RULE_loop = 11, 
		RULE_inicializacao = 12, RULE_atualizacao = 13, RULE_chamada_funcao = 14, 
		RULE_retorno = 15, RULE_argumentos = 16, RULE_expressao = 17, RULE_termo = 18, 
		RULE_fator = 19, RULE_saida = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "principal", "funcao", "parametros", "parametro", "declaracoes", 
			"declaracao_var", "comandos", "comando", "atribuicao", "condicional", 
			"loop", "inicializacao", "atualizacao", "chamada_funcao", "retorno", 
			"argumentos", "expressao", "termo", "fator", "saida"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "'while'", "'for'", "'if'", "'else'", "'elf'", "'return'", 
			"'func'", "'input'", "'print'", "'_'", "'PRINCIPAL'", null, null, null, 
			null, "'!'", "'<-'", "'++'", "'{'", "'}'", "'('", "')'", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "ENQUANTO", "PARA", "SE", "SENAO", "SENAO_SE", "RETORNAR", 
			"FUNCAO", "ENTRADA", "SAIDA", "NULL", "PRINCIPAL", "TIPO", "OP_ARIT", 
			"OP_REL", "OP_BOOL", "OP_BOOL_NEG", "OP_ATRIB", "OP_CONCAT", "ABRIR_CH", 
			"FECHAR_CH", "ABRIR_PAR", "FECHAR_PAR", "DELIMITADOR", "ID", "NUM", "VALOR_BOOL", 
			"STRING_LITERAL", "WS", "COMENT", "ErrorChar"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "minhaGramatica.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public minhaGramaticaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public PrincipalContext principal() {
			return getRuleContext(PrincipalContext.class,0);
		}
		public TerminalNode EOF() { return getToken(minhaGramaticaParser.EOF, 0); }
		public List<FuncaoContext> funcao() {
			return getRuleContexts(FuncaoContext.class);
		}
		public FuncaoContext funcao(int i) {
			return getRuleContext(FuncaoContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minhaGramaticaListener ) ((minhaGramaticaListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minhaGramaticaListener ) ((minhaGramaticaListener)listener).exitPrograma(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(42);
					funcao();
					}
					} 
				}
				setState(47);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(48);
			principal();
			setState(49);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrincipalContext extends ParserRuleContext {
		public TerminalNode FUNCAO() { return getToken(minhaGramaticaParser.FUNCAO, 0); }
		public TerminalNode TIPO() { return getToken(minhaGramaticaParser.TIPO, 0); }
		public TerminalNode PRINCIPAL() { return getToken(minhaGramaticaParser.PRINCIPAL, 0); }
		public TerminalNode ABRIR_PAR() { return getToken(minhaGramaticaParser.ABRIR_PAR, 0); }
		public TerminalNode FECHAR_PAR() { return getToken(minhaGramaticaParser.FECHAR_PAR, 0); }
		public TerminalNode ABRIR_CH() { return getToken(minhaGramaticaParser.ABRIR_CH, 0); }
		public DeclaracoesContext declaracoes() {
			return getRuleContext(DeclaracoesContext.class,0);
		}
		public ComandosContext comandos() {
			return getRuleContext(ComandosContext.class,0);
		}
		public TerminalNode FECHAR_CH() { return getToken(minhaGramaticaParser.FECHAR_CH, 0); }
		public ParametrosContext parametros() {
			return getRuleContext(ParametrosContext.class,0);
		}
		public TerminalNode DELIMITADOR() { return getToken(minhaGramaticaParser.DELIMITADOR, 0); }
		public PrincipalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_principal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minhaGramaticaListener ) ((minhaGramaticaListener)listener).enterPrincipal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minhaGramaticaListener ) ((minhaGramaticaListener)listener).exitPrincipal(this);
		}
	}

	public final PrincipalContext principal() throws RecognitionException {
		PrincipalContext _localctx = new PrincipalContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_principal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(FUNCAO);
			setState(52);
			match(TIPO);
			setState(53);
			match(PRINCIPAL);
			setState(54);
			match(ABRIR_PAR);
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TIPO) {
				{
				setState(55);
				parametros();
				}
			}

			setState(58);
			match(FECHAR_PAR);
			setState(59);
			match(ABRIR_CH);
			setState(60);
			declaracoes();
			setState(61);
			comandos();
			setState(62);
			match(FECHAR_CH);
			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DELIMITADOR) {
				{
				setState(63);
				match(DELIMITADOR);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncaoContext extends ParserRuleContext {
		public TerminalNode FUNCAO() { return getToken(minhaGramaticaParser.FUNCAO, 0); }
		public TerminalNode TIPO() { return getToken(minhaGramaticaParser.TIPO, 0); }
		public TerminalNode ID() { return getToken(minhaGramaticaParser.ID, 0); }
		public TerminalNode ABRIR_PAR() { return getToken(minhaGramaticaParser.ABRIR_PAR, 0); }
		public TerminalNode FECHAR_PAR() { return getToken(minhaGramaticaParser.FECHAR_PAR, 0); }
		public TerminalNode ABRIR_CH() { return getToken(minhaGramaticaParser.ABRIR_CH, 0); }
		public DeclaracoesContext declaracoes() {
			return getRuleContext(DeclaracoesContext.class,0);
		}
		public ComandosContext comandos() {
			return getRuleContext(ComandosContext.class,0);
		}
		public TerminalNode FECHAR_CH() { return getToken(minhaGramaticaParser.FECHAR_CH, 0); }
		public ParametrosContext parametros() {
			return getRuleContext(ParametrosContext.class,0);
		}
		public TerminalNode DELIMITADOR() { return getToken(minhaGramaticaParser.DELIMITADOR, 0); }
		public FuncaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minhaGramaticaListener ) ((minhaGramaticaListener)listener).enterFuncao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minhaGramaticaListener ) ((minhaGramaticaListener)listener).exitFuncao(this);
		}
	}

	public final FuncaoContext funcao() throws RecognitionException {
		FuncaoContext _localctx = new FuncaoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_funcao);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			match(FUNCAO);
			setState(67);
			match(TIPO);
			setState(68);
			match(ID);
			setState(69);
			match(ABRIR_PAR);
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TIPO) {
				{
				setState(70);
				parametros();
				}
			}

			setState(73);
			match(FECHAR_PAR);
			setState(74);
			match(ABRIR_CH);
			setState(75);
			declaracoes();
			setState(76);
			comandos();
			setState(77);
			match(FECHAR_CH);
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DELIMITADOR) {
				{
				setState(78);
				match(DELIMITADOR);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParametrosContext extends ParserRuleContext {
		public List<ParametroContext> parametro() {
			return getRuleContexts(ParametroContext.class);
		}
		public ParametroContext parametro(int i) {
			return getRuleContext(ParametroContext.class,i);
		}
		public ParametrosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametros; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minhaGramaticaListener ) ((minhaGramaticaListener)listener).enterParametros(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minhaGramaticaListener ) ((minhaGramaticaListener)listener).exitParametros(this);
		}
	}

	public final ParametrosContext parametros() throws RecognitionException {
		ParametrosContext _localctx = new ParametrosContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_parametros);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			parametro();
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(82);
				match(T__0);
				setState(83);
				parametro();
				}
				}
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParametroContext extends ParserRuleContext {
		public TerminalNode TIPO() { return getToken(minhaGramaticaParser.TIPO, 0); }
		public TerminalNode ID() { return getToken(minhaGramaticaParser.ID, 0); }
		public ParametroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametro; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minhaGramaticaListener ) ((minhaGramaticaListener)listener).enterParametro(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minhaGramaticaListener ) ((minhaGramaticaListener)listener).exitParametro(this);
		}
	}

	public final ParametroContext parametro() throws RecognitionException {
		ParametroContext _localctx = new ParametroContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_parametro);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(TIPO);
			setState(90);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracoesContext extends ParserRuleContext {
		public List<Declaracao_varContext> declaracao_var() {
			return getRuleContexts(Declaracao_varContext.class);
		}
		public Declaracao_varContext declaracao_var(int i) {
			return getRuleContext(Declaracao_varContext.class,i);
		}
		public List<TerminalNode> DELIMITADOR() { return getTokens(minhaGramaticaParser.DELIMITADOR); }
		public TerminalNode DELIMITADOR(int i) {
			return getToken(minhaGramaticaParser.DELIMITADOR, i);
		}
		public DeclaracoesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracoes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minhaGramaticaListener ) ((minhaGramaticaListener)listener).enterDeclaracoes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minhaGramaticaListener ) ((minhaGramaticaListener)listener).exitDeclaracoes(this);
		}
	}

	public final DeclaracoesContext declaracoes() throws RecognitionException {
		DeclaracoesContext _localctx = new DeclaracoesContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declaracoes);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(92);
					declaracao_var();
					setState(93);
					match(DELIMITADOR);
					}
					} 
				}
				setState(99);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Declaracao_varContext extends ParserRuleContext {
		public TerminalNode TIPO() { return getToken(minhaGramaticaParser.TIPO, 0); }
		public TerminalNode ID() { return getToken(minhaGramaticaParser.ID, 0); }
		public TerminalNode OP_ATRIB() { return getToken(minhaGramaticaParser.OP_ATRIB, 0); }
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public Declaracao_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minhaGramaticaListener ) ((minhaGramaticaListener)listener).enterDeclaracao_var(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minhaGramaticaListener ) ((minhaGramaticaListener)listener).exitDeclaracao_var(this);
		}
	}

	public final Declaracao_varContext declaracao_var() throws RecognitionException {
		Declaracao_varContext _localctx = new Declaracao_varContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_declaracao_var);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(TIPO);
			setState(101);
			match(ID);
			setState(102);
			match(OP_ATRIB);
			setState(103);
			expressao();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComandosContext extends ParserRuleContext {
		public List<ComandoContext> comando() {
			return getRuleContexts(ComandoContext.class);
		}
		public ComandoContext comando(int i) {
			return getRuleContext(ComandoContext.class,i);
		}
		public ComandosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comandos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minhaGramaticaListener ) ((minhaGramaticaListener)listener).enterComandos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minhaGramaticaListener ) ((minhaGramaticaListener)listener).exitComandos(this);
		}
	}

	public final ComandosContext comandos() throws RecognitionException {
		ComandosContext _localctx = new ComandosContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_comandos);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 33563804L) != 0)) {
				{
				{
				setState(105);
				comando();
				}
				}
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComandoContext extends ParserRuleContext {
		public AtribuicaoContext atribuicao() {
			return getRuleContext(AtribuicaoContext.class,0);
		}
		public TerminalNode DELIMITADOR() { return getToken(minhaGramaticaParser.DELIMITADOR, 0); }
		public Declaracao_varContext declaracao_var() {
			return getRuleContext(Declaracao_varContext.class,0);
		}
		public CondicionalContext condicional() {
			return getRuleContext(CondicionalContext.class,0);
		}
		public LoopContext loop() {
			return getRuleContext(LoopContext.class,0);
		}
		public Chamada_funcaoContext chamada_funcao() {
			return getRuleContext(Chamada_funcaoContext.class,0);
		}
		public RetornoContext retorno() {
			return getRuleContext(RetornoContext.class,0);
		}
		public SaidaContext saida() {
			return getRuleContext(SaidaContext.class,0);
		}
		public ComandoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comando; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minhaGramaticaListener ) ((minhaGramaticaListener)listener).enterComando(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minhaGramaticaListener ) ((minhaGramaticaListener)listener).exitComando(this);
		}
	}

	public final ComandoContext comando() throws RecognitionException {
		ComandoContext _localctx = new ComandoContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_comando);
		try {
			setState(128);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(111);
				atribuicao();
				setState(112);
				match(DELIMITADOR);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(114);
				declaracao_var();
				setState(115);
				match(DELIMITADOR);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(117);
				condicional();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(118);
				loop();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(119);
				chamada_funcao();
				setState(120);
				match(DELIMITADOR);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(122);
				retorno();
				setState(123);
				match(DELIMITADOR);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(125);
				saida();
				setState(126);
				match(DELIMITADOR);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AtribuicaoContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(minhaGramaticaParser.ID, 0); }
		public TerminalNode OP_ATRIB() { return getToken(minhaGramaticaParser.OP_ATRIB, 0); }
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public AtribuicaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atribuicao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minhaGramaticaListener ) ((minhaGramaticaListener)listener).enterAtribuicao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minhaGramaticaListener ) ((minhaGramaticaListener)listener).exitAtribuicao(this);
		}
	}

	public final AtribuicaoContext atribuicao() throws RecognitionException {
		AtribuicaoContext _localctx = new AtribuicaoContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_atribuicao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(ID);
			setState(131);
			match(OP_ATRIB);
			setState(132);
			expressao();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CondicionalContext extends ParserRuleContext {
		public TerminalNode SE() { return getToken(minhaGramaticaParser.SE, 0); }
		public List<TerminalNode> ABRIR_PAR() { return getTokens(minhaGramaticaParser.ABRIR_PAR); }
		public TerminalNode ABRIR_PAR(int i) {
			return getToken(minhaGramaticaParser.ABRIR_PAR, i);
		}
		public List<ExpressaoContext> expressao() {
			return getRuleContexts(ExpressaoContext.class);
		}
		public ExpressaoContext expressao(int i) {
			return getRuleContext(ExpressaoContext.class,i);
		}
		public List<TerminalNode> FECHAR_PAR() { return getTokens(minhaGramaticaParser.FECHAR_PAR); }
		public TerminalNode FECHAR_PAR(int i) {
			return getToken(minhaGramaticaParser.FECHAR_PAR, i);
		}
		public List<TerminalNode> ABRIR_CH() { return getTokens(minhaGramaticaParser.ABRIR_CH); }
		public TerminalNode ABRIR_CH(int i) {
			return getToken(minhaGramaticaParser.ABRIR_CH, i);
		}
		public List<ComandosContext> comandos() {
			return getRuleContexts(ComandosContext.class);
		}
		public ComandosContext comandos(int i) {
			return getRuleContext(ComandosContext.class,i);
		}
		public List<TerminalNode> FECHAR_CH() { return getTokens(minhaGramaticaParser.FECHAR_CH); }
		public TerminalNode FECHAR_CH(int i) {
			return getToken(minhaGramaticaParser.FECHAR_CH, i);
		}
		public List<TerminalNode> SENAO_SE() { return getTokens(minhaGramaticaParser.SENAO_SE); }
		public TerminalNode SENAO_SE(int i) {
			return getToken(minhaGramaticaParser.SENAO_SE, i);
		}
		public TerminalNode SENAO() { return getToken(minhaGramaticaParser.SENAO, 0); }
		public CondicionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicional; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minhaGramaticaListener ) ((minhaGramaticaListener)listener).enterCondicional(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minhaGramaticaListener ) ((minhaGramaticaListener)listener).exitCondicional(this);
		}
	}

	public final CondicionalContext condicional() throws RecognitionException {
		CondicionalContext _localctx = new CondicionalContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_condicional);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(SE);
			setState(135);
			match(ABRIR_PAR);
			setState(136);
			expressao();
			setState(137);
			match(FECHAR_PAR);
			setState(138);
			match(ABRIR_CH);
			setState(139);
			comandos();
			setState(140);
			match(FECHAR_CH);
			setState(151);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SENAO_SE) {
				{
				{
				setState(141);
				match(SENAO_SE);
				setState(142);
				match(ABRIR_PAR);
				setState(143);
				expressao();
				setState(144);
				match(FECHAR_PAR);
				setState(145);
				match(ABRIR_CH);
				setState(146);
				comandos();
				setState(147);
				match(FECHAR_CH);
				}
				}
				setState(153);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(159);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SENAO) {
				{
				setState(154);
				match(SENAO);
				setState(155);
				match(ABRIR_CH);
				setState(156);
				comandos();
				setState(157);
				match(FECHAR_CH);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
